# Task-Management-CLI

./: CMakeLists.txt  README.md  addTask.h  exportTasks.cpp  exportTasks.h  greeting.cpp  greeting.h  importTasks.cpp  importTasks.h  listFiles.h  main.cpp  markDone.h  menu.cpp  menu.h  seedTask.h
Models/: task.h
